src/content/docs/3.4.2/guides/1-getting-started.mdx
---
title: Getting Started
description: Get started with Shoukaku.
slug: 3.4.2/guides/1-getting-started
---

import { PackageManagers } from "starlight-package-managers";
import { Tabs, TabItem, Steps, Aside } from '@astrojs/starlight/components';

Shoukaku is a stable, powerful and updated wrapper around [Lavalink](https://lavalink.dev/). It is Discord library agnostic, and can add support for new Discord libraries using connectors.

## Set up Shoukaku

<Steps>
  1. Install Shoukaku using your favorite package manager.

     <PackageManagers type="add" pkg="shoukaku@3.4.2" pkgManagers={["npm", "yarn", "pnpm", "bun"]} />

  2. Initialize the library using one of the connectors.

     <Tabs>
       <TabItem label="Discord.JS">
         ```js
         const { Client } = require('discord.js');
         const { Shoukaku, Connectors } = require('shoukaku');
         const Nodes = [{
             name: 'Localhost',
             url: 'localhost:6969',
             auth: 'marin_kitagawa'
         }];
         const client = new Client();
         const shoukaku = new Shoukaku(new Connectors.DiscordJS(client), Nodes);
         // ALWAYS handle error, logging it will do
         shoukaku.on('error', (_, error) => console.error(error));
         client.login('token');
         // If you want shoukaku to be available on client, then bind it to it, here is one example of it
         client.shoukaku = shoukaku;
         ```
       </TabItem>

       <TabItem label="Eris">
         ```js
         const { Client } = require('discord.js');
         const { Shoukaku, Connectors } = require('shoukaku');
         const Nodes = [{
             name: 'Localhost',
             url: 'localhost:6969',
             auth: 'marin_kitagawa'
         }];
         const client = new Client();
         const shoukaku = new Shoukaku(new Connectors.Eris(client), Nodes);
         // ALWAYS handle error, logging it will do
         shoukaku.on('error', (_, error) => console.error(error));
         client.login('token');
         // If you want shoukaku to be available on client, then bind it to it, here is one example of it
         client.shoukaku = shoukaku;
         ```
       </TabItem>

       <TabItem label="Oceanic.JS">
         ```js
         const { Client } = require('discord.js');
         const { Shoukaku, Connectors } = require('shoukaku');
         const Nodes = [{
             name: 'Localhost',
             url: 'localhost:6969',
             auth: 'marin_kitagawa'
         }];
         const client = new Client();
         const shoukaku = new Shoukaku(new Connectors.OceanicJS(client), Nodes);
         // ALWAYS handle error, logging it will do
         shoukaku.on('error', (_, error) => console.error(error));
         client.login('token');
         // If you want shoukaku to be available on client, then bind it to it, here is one example of it
         client.shoukaku = shoukaku;
         ```
       </TabItem>
     </Tabs>

     <Aside type="danger" title="Do not ever do this!">
       Shoukaku will never initialized if you don't start her before you call `client.login()`

       ```js
       client.on('ready', () => {
           client.shoukaku = new Shoukaku(new Connectors.DiscordJS(client), Nodes);
       });
       ```
     </Aside>
</Steps>

## Further reading

* [Lavalink Docs](https://lavalink.dev)
